--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!-- Note: you may use this starter code, but it is not a requirement -->
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>The Gallery of Horns</title>
-  <meta name="viewport" content=
-  "width=device-width, initial-scale=1.0">
+    <title>The Gallery of Horns</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-  <header>
-    <h1>The Gallery of Horns</h1><select>
-      <option value="default">
-        Filter by Keyword
-      </option>
-    </select>
-  </header>
-  <main>
-    <section id="photo-template">
-      <img src="" alt="">
-    </section>
-  </main>
-  <footer>
-    © 2019 Silas, Serge
-  </footer>
+    <header>
+        <h1>The Gallery of Horns</h1><select>
+            <option value="default">
+                Filter by Keyword
+            </option>
+        </select>
+    </header>
+    <main>
+
+        <section id="container">
+            <div id="image-template">
+                <img src="https://images.unsplash.com/photo-1512636618879-bbe79107e9e3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd9460ee6d1ddbb6b1ca7be86dfc4590&auto=format&fit=crop&w=1825&q=80"
+                    alt="picture">
+                <h2 class="title">Rhino family</h2>
+                <p>Mother (or father) rhino with two babies</p>
+                <p>rhino</p>
+                <p>2</p>
+            </div>
+        </section>
+
+
+    </main>
+    <footer>
+        © 2019 Silas, Serge
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
 </body>
+
 </html>
