feature 1 is done

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 
         <section id="container">
             <div id="image-template">
-                <img src="https://images.unsplash.com/photo-1512636618879-bbe79107e9e3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=bd9460ee6d1ddbb6b1ca7be86dfc4590&auto=format&fit=crop&w=1825&q=80"
-                    alt="picture">
-                <h2 class="title">Rhino family</h2>
-                <p>Mother (or father) rhino with two babies</p>
-                <p>rhino</p>
-                <p>2</p>
+                <img src="">
+                <h2 class="title"></h2>
+                <p id="description"></p>
+                <p id="keyword"></p>
+                <p id="horns"></p>
             </div>
         </section>
 
