--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <header>
-        <h1>The Gallery of Horns</h1><select>
-            <option value="default">
+        <h1>The Gallery of Horns</h1>
+        <select>
+            <option value="keyword">
                 Filter by Keyword
             </option>
         </select>
