--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>The Gallery of Horns</h1>
-        <select>
+        <select id ='select' name = 'on'>
             <option value="keyword">
                 Filter by Keyword
             </option>
