no duplicate images are being populated when switching the page

--- a/index.html
+++ b/index.html
@@ -19,18 +19,27 @@
                 Filter by Keyword
             </option>
         </select>
+
+        <nav>
+<li><button id="page1">Page1</button></li>
+<li><button id="page2">Page2</button></li>
+
+
+        </nav>
     </header>
     <main>
-
-        <section id="container">
-            <div id="image-template">
-                <img src="">
-                <h2 class="title"></h2>
-                <p id="description"></p>
-                <p id="keyword"></p>
-                <p id="horns"></p>
-            </div>
+        <div id="image-template">
+            <img src="">
+            <h2 class="title"></h2>
+            <p id="description"></p>
+            <p id="keyword"></p>
+            <p id="horns"></p>
+        </div>
+        <section id="container1">
         </section>
+
+        <section id="container2">
+           </section>
 
 
     </main>
